--- a/Notebooks/01_3_Elementos del Lenguaje.ipynb
+++ b/Notebooks/01_3_Elementos del Lenguaje.ipynb
@@ -6,7 +6,7 @@
     "id": "aOAR5xCN2aTI"
    },
    "source": [
-    "![Verne](https://www.vernegroup.com/wp-content/uploads/2021/08/Image-1-1-1.png)\n",
+    "![Verne](Python_IFFE\\resources\\Dataging.png)\n",
     "# Elementos del Lenguaje"
    ]
   },
