--- a/Notebooks/03_04_Escalado de Caracteristicas.ipynb
+++ b/Notebooks/03_04_Escalado de Caracteristicas.ipynb
@@ -1,1 +1,329 @@
-{"cells":[{"cell_type":"markdown","metadata":{"azdata_cell_guid":"6ff08df4-5bc0-47c1-ba66-20206ccc00b1","id":"e_7lSoH6-JEe"},"source":["![Verne](https://www.vernegroup.com/wp-content/uploads/2021/08/Image-1-1-1.png)"]},{"cell_type":"markdown","metadata":{"azdata_cell_guid":"023fc82f-0fcd-4826-a065-93ab4945fb60","id":"lMj-AMuwwXm_"},"source":["# Escalado de Características"]},{"cell_type":"code","execution_count":1,"metadata":{"azdata_cell_guid":"65afc185-cd26-4814-8eda-5236c18bbb92","executionInfo":{"elapsed":3024,"status":"ok","timestamp":1621071772638,"user":{"displayName":"Machine Learning","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GhwBRPV9dlAQMjYJcrnyebdRqxGjgfWs74B3NV3=s64","userId":"05609927355646341864"},"user_tz":-120},"id":"JcxP4Z9GwSad"},"outputs":[],"source":["import pandas as pd\n","import sqlite3\n","import numpy as np"]},{"cell_type":"code","execution_count":2,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"elapsed":25576,"status":"ok","timestamp":1621071795203,"user":{"displayName":"Machine Learning","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GhwBRPV9dlAQMjYJcrnyebdRqxGjgfWs74B3NV3=s64","userId":"05609927355646341864"},"user_tz":-120},"id":"vh6nSP8r-NPq","outputId":"c941de53-1c52-477f-9be8-237e3f8c8d71"},"outputs":[{"name":"stdout","output_type":"stream","text":["Mounted at /content/drive\n"]}],"source":["from google.colab import drive\n","drive.mount('/content/drive')"]},{"cell_type":"code","execution_count":3,"metadata":{"colab":{"base_uri":"https://localhost:8080/","height":308},"executionInfo":{"elapsed":2618,"status":"ok","timestamp":1621071803721,"user":{"displayName":"Machine Learning","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GhwBRPV9dlAQMjYJcrnyebdRqxGjgfWs74B3NV3=s64","userId":"05609927355646341864"},"user_tz":-120},"id":"1wJXuWR1-JEm","outputId":"4d0d85c2-b393-4bcf-cac1-eff4aff8657b"},"outputs":[{"data":{"text/html":["<div>\n","<style scoped>\n","    .dataframe tbody tr th:only-of-type {\n","        vertical-align: middle;\n","    }\n","\n","    .dataframe tbody tr th {\n","        vertical-align: top;\n","    }\n","\n","    .dataframe thead th {\n","        text-align: right;\n","    }\n","</style>\n","<table border=\"1\" class=\"dataframe\">\n","  <thead>\n","    <tr style=\"text-align: right;\">\n","      <th></th>\n","      <th>CodCliente</th>\n","      <th>FechaNacimiento</th>\n","      <th>EstadoCivil</th>\n","      <th>Sexo</th>\n","      <th>IngresosAnuales</th>\n","      <th>HijosACargo</th>\n","      <th>NivelAcademico</th>\n","      <th>Ocupacion</th>\n","    </tr>\n","  </thead>\n","  <tbody>\n","    <tr>\n","      <th>0</th>\n","      <td>000020</td>\n","      <td>1976-04-08</td>\n","      <td>M</td>\n","      <td>M</td>\n","      <td>90000.0</td>\n","      <td>0.0</td>\n","      <td>Licenciatura</td>\n","      <td>Profesional especializado</td>\n","    </tr>\n","    <tr>\n","      <th>1</th>\n","      <td>000026</td>\n","      <td>1975-05-14</td>\n","      <td>S</td>\n","      <td>M</td>\n","      <td>60000.0</td>\n","      <td>3.0</td>\n","      <td>Licenciatura</td>\n","      <td>Profesional especializado</td>\n","    </tr>\n","    <tr>\n","      <th>2</th>\n","      <td>000029</td>\n","      <td>1975-08-12</td>\n","      <td>M</td>\n","      <td>M</td>\n","      <td>60000.0</td>\n","      <td>3.0</td>\n","      <td>Licenciatura</td>\n","      <td>Profesional especializado</td>\n","    </tr>\n","    <tr>\n","      <th>3</th>\n","      <td>000046</td>\n","      <td>1978-02-15</td>\n","      <td>S</td>\n","      <td>F</td>\n","      <td>70000.0</td>\n","      <td>0.0</td>\n","      <td>Licenciatura</td>\n","      <td>Profesional especializado</td>\n","    </tr>\n","    <tr>\n","      <th>4</th>\n","      <td>000047</td>\n","      <td>1978-08-08</td>\n","      <td>S</td>\n","      <td>F</td>\n","      <td>80000.0</td>\n","      <td>5.0</td>\n","      <td>Licenciatura</td>\n","      <td>Profesional especializado</td>\n","    </tr>\n","  </tbody>\n","</table>\n","</div>"],"text/plain":["  CodCliente FechaNacimiento  ... NivelAcademico                  Ocupacion\n","0     000020      1976-04-08  ...   Licenciatura  Profesional especializado\n","1     000026      1975-05-14  ...   Licenciatura  Profesional especializado\n","2     000029      1975-08-12  ...   Licenciatura  Profesional especializado\n","3     000046      1978-02-15  ...   Licenciatura  Profesional especializado\n","4     000047      1978-08-08  ...   Licenciatura  Profesional especializado\n","\n","[5 rows x 8 columns]"]},"execution_count":3,"metadata":{"tags":[]},"output_type":"execute_result"}],"source":["conn = sqlite3.connect('/content/drive/MyDrive/Datos/Tiendas24H.sqlite')\n","query = \"select c.CodCliente, FechaNacimiento, EstadoCivil, Sexo,IngresosAnuales, HijosACargo, N.NivelAcademico, O.Ocupacion from clientes c inner join NivelAcademico N    on c.NivelAcademico = N.Codigo     inner join Ocupacion O on c.Ocupacion = o.Codigo\"\n","\n","df = pd.read_sql_query(query,conn)\n","\n","df.head()"]},{"cell_type":"code","execution_count":4,"metadata":{"executionInfo":{"elapsed":1400,"status":"ok","timestamp":1621071871873,"user":{"displayName":"Machine Learning","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GhwBRPV9dlAQMjYJcrnyebdRqxGjgfWs74B3NV3=s64","userId":"05609927355646341864"},"user_tz":-120},"id":"r5wgkMja-JEn"},"outputs":[],"source":["caracteristicas =[\"IngresosAnuales\",\"HijosACargo\"]\n","from sklearn.preprocessing import StandardScaler\n","scaler = StandardScaler()\n","X = scaler.fit_transform(df[caracteristicas])"]},{"cell_type":"code","execution_count":5,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"elapsed":550,"status":"ok","timestamp":1621071873563,"user":{"displayName":"Machine Learning","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GhwBRPV9dlAQMjYJcrnyebdRqxGjgfWs74B3NV3=s64","userId":"05609927355646341864"},"user_tz":-120},"id":"p8n8rfRy-JEn","outputId":"819064ea-b3b7-419d-fecb-de34125125a9"},"outputs":[{"data":{"text/plain":["array([[ 0.88021336, -0.67313748],\n","       [-0.01417334,  1.29309012],\n","       [-0.01417334,  1.29309012],\n","       ...,\n","       [ 0.88021336, -0.67313748],\n","       [ 0.88021336, -0.67313748],\n","       [ 1.47647117,  0.63768092]])"]},"execution_count":5,"metadata":{"tags":[]},"output_type":"execute_result"}],"source":["X"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"BrmodB96-JEn"},"outputs":[],"source":[]}],"metadata":{"colab":{"name":"03_04_Escalado de Caracteristicas.ipynb","provenance":[],"toc_visible":true},"kernelspec":{"display_name":"Python 3.8.5 64-bit","name":"python_defaultSpec_1600709317385"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.8.5-final"}},"nbformat":4,"nbformat_minor":0}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "azdata_cell_guid": "6ff08df4-5bc0-47c1-ba66-20206ccc00b1",
+    "id": "e_7lSoH6-JEe"
+   },
+   "source": [
+    "![Dataging](Python_IFFE\\resources\\Dataging.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "azdata_cell_guid": "023fc82f-0fcd-4826-a065-93ab4945fb60",
+    "id": "lMj-AMuwwXm_"
+   },
+   "source": [
+    "# Escalado de Características"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "azdata_cell_guid": "65afc185-cd26-4814-8eda-5236c18bbb92",
+    "executionInfo": {
+     "elapsed": 3024,
+     "status": "ok",
+     "timestamp": 1621071772638,
+     "user": {
+      "displayName": "Machine Learning",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhwBRPV9dlAQMjYJcrnyebdRqxGjgfWs74B3NV3=s64",
+      "userId": "05609927355646341864"
+     },
+     "user_tz": -120
+    },
+    "id": "JcxP4Z9GwSad"
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 25576,
+     "status": "ok",
+     "timestamp": 1621071795203,
+     "user": {
+      "displayName": "Machine Learning",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhwBRPV9dlAQMjYJcrnyebdRqxGjgfWs74B3NV3=s64",
+      "userId": "05609927355646341864"
+     },
+     "user_tz": -120
+    },
+    "id": "vh6nSP8r-NPq",
+    "outputId": "c941de53-1c52-477f-9be8-237e3f8c8d71"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mounted at /content/drive\n"
+     ]
+    }
+   ],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 308
+    },
+    "executionInfo": {
+     "elapsed": 2618,
+     "status": "ok",
+     "timestamp": 1621071803721,
+     "user": {
+      "displayName": "Machine Learning",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhwBRPV9dlAQMjYJcrnyebdRqxGjgfWs74B3NV3=s64",
+      "userId": "05609927355646341864"
+     },
+     "user_tz": -120
+    },
+    "id": "1wJXuWR1-JEm",
+    "outputId": "4d0d85c2-b393-4bcf-cac1-eff4aff8657b"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CodCliente</th>\n",
+       "      <th>FechaNacimiento</th>\n",
+       "      <th>EstadoCivil</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>IngresosAnuales</th>\n",
+       "      <th>HijosACargo</th>\n",
+       "      <th>NivelAcademico</th>\n",
+       "      <th>Ocupacion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000020</td>\n",
+       "      <td>1976-04-08</td>\n",
+       "      <td>M</td>\n",
+       "      <td>M</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Licenciatura</td>\n",
+       "      <td>Profesional especializado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000026</td>\n",
+       "      <td>1975-05-14</td>\n",
+       "      <td>S</td>\n",
+       "      <td>M</td>\n",
+       "      <td>60000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Licenciatura</td>\n",
+       "      <td>Profesional especializado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000029</td>\n",
+       "      <td>1975-08-12</td>\n",
+       "      <td>M</td>\n",
+       "      <td>M</td>\n",
+       "      <td>60000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Licenciatura</td>\n",
+       "      <td>Profesional especializado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000046</td>\n",
+       "      <td>1978-02-15</td>\n",
+       "      <td>S</td>\n",
+       "      <td>F</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Licenciatura</td>\n",
+       "      <td>Profesional especializado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000047</td>\n",
+       "      <td>1978-08-08</td>\n",
+       "      <td>S</td>\n",
+       "      <td>F</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Licenciatura</td>\n",
+       "      <td>Profesional especializado</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  CodCliente FechaNacimiento  ... NivelAcademico                  Ocupacion\n",
+       "0     000020      1976-04-08  ...   Licenciatura  Profesional especializado\n",
+       "1     000026      1975-05-14  ...   Licenciatura  Profesional especializado\n",
+       "2     000029      1975-08-12  ...   Licenciatura  Profesional especializado\n",
+       "3     000046      1978-02-15  ...   Licenciatura  Profesional especializado\n",
+       "4     000047      1978-08-08  ...   Licenciatura  Profesional especializado\n",
+       "\n",
+       "[5 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {
+      "tags": []
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn = sqlite3.connect('/content/drive/MyDrive/Datos/Tiendas24H.sqlite')\n",
+    "query = \"select c.CodCliente, FechaNacimiento, EstadoCivil, Sexo,IngresosAnuales, HijosACargo, N.NivelAcademico, O.Ocupacion from clientes c inner join NivelAcademico N    on c.NivelAcademico = N.Codigo     inner join Ocupacion O on c.Ocupacion = o.Codigo\"\n",
+    "\n",
+    "df = pd.read_sql_query(query,conn)\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 1400,
+     "status": "ok",
+     "timestamp": 1621071871873,
+     "user": {
+      "displayName": "Machine Learning",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhwBRPV9dlAQMjYJcrnyebdRqxGjgfWs74B3NV3=s64",
+      "userId": "05609927355646341864"
+     },
+     "user_tz": -120
+    },
+    "id": "r5wgkMja-JEn"
+   },
+   "outputs": [],
+   "source": [
+    "caracteristicas =[\"IngresosAnuales\",\"HijosACargo\"]\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X = scaler.fit_transform(df[caracteristicas])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 550,
+     "status": "ok",
+     "timestamp": 1621071873563,
+     "user": {
+      "displayName": "Machine Learning",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhwBRPV9dlAQMjYJcrnyebdRqxGjgfWs74B3NV3=s64",
+      "userId": "05609927355646341864"
+     },
+     "user_tz": -120
+    },
+    "id": "p8n8rfRy-JEn",
+    "outputId": "819064ea-b3b7-419d-fecb-de34125125a9"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.88021336, -0.67313748],\n",
+       "       [-0.01417334,  1.29309012],\n",
+       "       [-0.01417334,  1.29309012],\n",
+       "       ...,\n",
+       "       [ 0.88021336, -0.67313748],\n",
+       "       [ 0.88021336, -0.67313748],\n",
+       "       [ 1.47647117,  0.63768092]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {
+      "tags": []
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "BrmodB96-JEn"
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "name": "03_04_Escalado de Caracteristicas.ipynb",
+   "provenance": [],
+   "toc_visible": true
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.5 64-bit",
+   "name": "python_defaultSpec_1600709317385"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5-final"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
