--- a/Notebooks/01_4_Modulos_Paquetes.ipynb
+++ b/Notebooks/01_4_Modulos_Paquetes.ipynb
@@ -6,7 +6,7 @@
     "id": "LaCFVg5K223q"
    },
    "source": [
-    "![Dataging](Python_IFFE\\resources\\Dataging.png)\n",
+    "![Dataging](https://raw.githubusercontent.com/dataging/public-resources/61263724aea5476ba5ebf38478beada519091957/logodataging.png)\n",
     "# Modulos, Paquetes y espacios de nombres\n",
     "\n",
     "El core de Python está disponible a través de lo que se conoce como la *Python Standard Library*, que incluye las bases para comenzar a trabajar con el lenguaje. Dependiendo de la distribución que instalemos (Anaconda, Conda, ...) adicionalmente se nos instalarán por defecto determinados paquetes, para extender la funcionalidad del core. Obviamente, nosotros también podemos crear nuestros propios paquetes y podemos también instalar paquetes adicionales independientemente de lo que venga por defecto en la distribución seleccionada. \n",
