--- a/Notebooks/01_2_Notebook.ipynb
+++ b/Notebooks/01_2_Notebook.ipynb
@@ -6,7 +6,7 @@
     "id": "6YBtk_rG2G0Y"
    },
    "source": [
-    "![Dataging](Python_IFFE\\resources\\Dataging.png)\n",
+    "![Dataging](https://raw.githubusercontent.com/dataging/public-resources/61263724aea5476ba5ebf38478beada519091957/logodataging.png)\n",
     "# Notebook\n",
     "El Notebook, está compuesto por celdas, que básicamente pueden ser de dos tipos: Código y Markdown.\n",
     "La ejecución del código se realiza utilizando un Kernel, que en nuestro caso será IPython\n",
