--- a/Notebooks/01_3_Elementos del Lenguaje.ipynb
+++ b/Notebooks/01_3_Elementos del Lenguaje.ipynb
@@ -6,7 +6,7 @@
     "id": "aOAR5xCN2aTI"
    },
    "source": [
-    "![Verne](Python_IFFE\\resources\\Dataging.png)\n",
+    "![Dataging](https://raw.githubusercontent.com/dataging/public-resources/61263724aea5476ba5ebf38478beada519091957/logodataging.png)\n",
     "# Elementos del Lenguaje"
    ]
   },
