--- a/Notebooks/02_01_Repaso Basico Pandas.ipynb
+++ b/Notebooks/02_01_Repaso Basico Pandas.ipynb
@@ -7,7 +7,7 @@
     "id": "UCyJpqhBXbgo"
    },
    "source": [
-    "![Dataging](Python_IFFE\\resources\\Dataging.png)\n",
+    "![Dataging](https://raw.githubusercontent.com/dataging/public-resources/61263724aea5476ba5ebf38478beada519091957/logodataging.png)\n",
     "# Repaso básico de Pandas"
    ]
   },
