--- a/Notebooks/02_02_Analizando los datos del Titanic.ipynb
+++ b/Notebooks/02_02_Analizando los datos del Titanic.ipynb
@@ -6,7 +6,7 @@
     "id": "y2h3h-iIIlRz"
    },
    "source": [
-    "![Verne](Python_IFFE\\resources\\Dataging.png)\n",
+    "![Dataging](https://raw.githubusercontent.com/dataging/public-resources/61263724aea5476ba5ebf38478beada519091957/logodataging.png)\n",
     "# Analizando los datos del hundimiento del Titanic\n",
     "\n",
     "\n",
