--- a/Notebooks/03_02_Nulos y repetidos.ipynb
+++ b/Notebooks/03_02_Nulos y repetidos.ipynb
@@ -7,7 +7,7 @@
     "id": "ZXx-mLbF33lw"
    },
    "source": [
-    "![Dataging](Python_IFFE\\resources\\Dataging.png)"
+    "![Dataging](https://raw.githubusercontent.com/dataging/public-resources/61263724aea5476ba5ebf38478beada519091957/logodataging.png)"
    ]
   },
   {
