--- a/Notebooks/03_04_Escalado de Caracteristicas.ipynb
+++ b/Notebooks/03_04_Escalado de Caracteristicas.ipynb
@@ -7,7 +7,7 @@
     "id": "e_7lSoH6-JEe"
    },
    "source": [
-    "![Dataging](Python_IFFE\\resources\\Dataging.png)"
+    "![Dataging](https://raw.githubusercontent.com/dataging/public-resources/61263724aea5476ba5ebf38478beada519091957/logodataging.png)"
    ]
   },
   {
