--- a/Notebooks/SAKILA.ipynb
+++ b/Notebooks/SAKILA.ipynb
@@ -1,1 +1,191 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"mount_file_id":"1WbpSwPtOxLhRc5hmGovDepIP_KIEC-_2","authorship_tag":"ABX9TyN4o+xE36VVMOhqCW8kz8W9"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","execution_count":1,"metadata":{"id":"y6s4GYdm1s6A","executionInfo":{"status":"ok","timestamp":1702717172087,"user_tz":-60,"elapsed":720,"user":{"displayName":"Machine Learning","userId":"05609927355646341864"}}},"outputs":[],"source":["import sqlite3\n","import pandas as pd"]},{"cell_type":"code","source":["conexion = sqlite3.connect('/content/drive/MyDrive/Datos/sakila.db')\n","consulta = 'SELECT * FROM INVENTORY'"],"metadata":{"id":"yfyK1Sq-2Sm9","executionInfo":{"status":"ok","timestamp":1702717182492,"user_tz":-60,"elapsed":592,"user":{"displayName":"Machine Learning","userId":"05609927355646341864"}}},"execution_count":2,"outputs":[]},{"cell_type":"code","source":["try:\n","  inventario=pd.read_sql(consulta,conexion)\n","except:\n","  print('imposible conectar y ejecutar la consulta')"],"metadata":{"id":"-DIvdW1z2iv4","executionInfo":{"status":"ok","timestamp":1702717185169,"user_tz":-60,"elapsed":402,"user":{"displayName":"Machine Learning","userId":"05609927355646341864"}}},"execution_count":3,"outputs":[]},{"cell_type":"code","source":["inventario.head()"],"metadata":{"id":"ARjOQ1mr2mLr"},"execution_count":null,"outputs":[]}]}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 720,
+     "status": "ok",
+     "timestamp": 1702717172087,
+     "user": {
+      "displayName": "Machine Learning",
+      "userId": "05609927355646341864"
+     },
+     "user_tz": -60
+    },
+    "id": "y6s4GYdm1s6A"
+   },
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 592,
+     "status": "ok",
+     "timestamp": 1702717182492,
+     "user": {
+      "displayName": "Machine Learning",
+      "userId": "05609927355646341864"
+     },
+     "user_tz": -60
+    },
+    "id": "yfyK1Sq-2Sm9"
+   },
+   "outputs": [],
+   "source": [
+    "conexion = sqlite3.connect('C:\\\\Users\\\\anton\\\\OneDrive\\\\Cursos\\\\IFFE\\\\Python\\\\code\\\\Python_IFFE\\\\Datos\\\\sakila.db')\n",
+    "# /content/drive/MyDrive/Datos/sakila.db\n",
+    "# \n",
+    "consulta = 'SELECT * FROM INVENTORY'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 402,
+     "status": "ok",
+     "timestamp": 1702717185169,
+     "user": {
+      "displayName": "Machine Learning",
+      "userId": "05609927355646341864"
+     },
+     "user_tz": -60
+    },
+    "id": "-DIvdW1z2iv4"
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  inventario=pd.read_sql(consulta,conexion)\n",
+    "except:\n",
+    "  print('imposible conectar y ejecutar la consulta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "id": "ARjOQ1mr2mLr"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>inventory_id</th>\n",
+       "      <th>film_id</th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>last_update</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2006-02-15 05:09:17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2006-02-15 05:09:17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2006-02-15 05:09:17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2006-02-15 05:09:17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2006-02-15 05:09:17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   inventory_id  film_id  store_id          last_update\n",
+       "0             1        1         1  2006-02-15 05:09:17\n",
+       "1             2        1         1  2006-02-15 05:09:17\n",
+       "2             3        1         1  2006-02-15 05:09:17\n",
+       "3             4        1         1  2006-02-15 05:09:17\n",
+       "4             5        1         2  2006-02-15 05:09:17"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inventario.head()"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyN4o+xE36VVMOhqCW8kz8W9",
+   "mount_file_id": "1WbpSwPtOxLhRc5hmGovDepIP_KIEC-_2",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
