Fechas y Bases de Datos

--- a/Notebooks/01_3_Elementos del Lenguaje.ipynb
+++ b/Notebooks/01_3_Elementos del Lenguaje.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -327,17 +327,12 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.google.colaboratory.intrinsic+json": {
-       "type": "string"
-      },
       "text/plain": [
        "'Mi nombre es Antonio.'"
       ]
      },
-     "execution_count": 9,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 4,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -392,6 +387,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(nombre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'23'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(23) #convertimos a cadena el entero 23"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "etyWluw92aTU"
@@ -404,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 633,
@@ -419,9 +454,21 @@
     },
     "id": "ikAHKp0H2aTU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cantidad = 23"
+    "cantidad = 23\n",
+    "type(cantidad)"
    ]
   },
   {
@@ -437,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 544,
@@ -452,9 +499,21 @@
     },
     "id": "i7G_gklW2aTV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "precio = 12.50"
+    "precio = 12.50\n",
+    "type(precio)"
    ]
   },
   {
@@ -487,6 +546,103 @@
    "source": [
     "verdadero = True\n",
     "falso = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fechas\n",
+    "Las fechas no son un tipo de dato primitivo en Python, por lo que debemos de utilizar algún módulo para trabajar con ellos. Disponemos del módulo datetime dentro de la PSL\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-12-29\n",
+      "2024-12-29 19:57:10.212824\n",
+      "29-12-2024\n",
+      "Sunday, 29 December, 24\n",
+      "19:57:10\n",
+      "19 horas, 57 minutos y 10 segundos\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2023, 3, 14, 2, 43, 24)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime, date, time\n",
+    "\n",
+    "print (date.today())\n",
+    "print (datetime.now())\n",
+    "\n",
+    "#Creamos objetos de tipo fecha y hora\n",
+    "date(2020, 12, 25)\n",
+    "time(12, 30, 0)\n",
+    "\n",
+    "#Conversiones a cadena de caracteres con diferentes formatos\n",
+    "\n",
+    "print(date.today().strftime('%d-%m-%Y'))\n",
+    "print(date.today().strftime('%A, %d %B, %y'))\n",
+    "\n",
+    "print(datetime.now().strftime('%H:%M:%S'))\n",
+    "print(datetime.now().strftime('%H horas, %M minutos y %S segundos'))\n",
+    "\n",
+    "#Convertimos cadenas a fechas\n",
+    "\n",
+    "datetime.strptime('14/3/2023', '%d/%m/%Y')\n",
+    "datetime.strptime('2023-3-14 02:43:24', '%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-01-20 00:00:00\n",
+      "-10 days, 0:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "datetime.timedelta"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Para Operar Fechas tenemos el objeto timedelta\n",
+    "from datetime import timedelta\n",
+    "\n",
+    "d1 = datetime(2025, 1, 10)\n",
+    "d2 = d1 + timedelta (days=10)\n",
+    "\n",
+    "print (d2)\n",
+    "\n",
+    "print (d1-d2) # devuelve un objeto de tipo timedelta\n",
+    "type (d1-d2)"
    ]
   },
   {
