--- a/Notebooks/02_03_Analizando los datos del Titanic.ipynb
+++ b/Notebooks/02_03_Analizando los datos del Titanic.ipynb
@@ -1711,7 +1711,7 @@
     "id": "sFgRdgJoIlV-"
    },
    "source": [
-    "¿Cómo se genera un historgrama de cualquier variable?, A continuación muestro como se genera el histograma de la columna 'Age':"
+    "¿Cómo se genera un histograma de cualquier variable?, A continuación muestro como se genera el histograma de la columna 'Age':"
    ]
   },
   {
