--- a/Notebooks/02_01_Repaso Basico Pandas.ipynb
+++ b/Notebooks/02_01_Repaso Basico Pandas.ipynb
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1178,6 +1178,139 @@
     "\n",
     "# Mostrar el DataFrame\n",
     "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4 entries, 0 to 3\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype\n",
+      "---  ------  --------------  -----\n",
+      " 0   Col1    4 non-null      int64\n",
+      " 1   Col2    4 non-null      int64\n",
+      " 2   Col3    4 non-null      int64\n",
+      "dtypes: int64(3)\n",
+      "memory usage: 228.0 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Devuelve el tipo de datos de cada columna, cuenteo de valores nulos y uso de memoria\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Col1</th>\n",
+       "      <th>Col2</th>\n",
+       "      <th>Col3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2013.000000</td>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>58.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.816497</td>\n",
+       "      <td>9.763879</td>\n",
+       "      <td>14.863266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2012.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>45.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2012.750000</td>\n",
+       "      <td>13.750000</td>\n",
+       "      <td>46.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2013.000000</td>\n",
+       "      <td>18.500000</td>\n",
+       "      <td>56.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2013.250000</td>\n",
+       "      <td>25.750000</td>\n",
+       "      <td>67.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2014.000000</td>\n",
+       "      <td>34.000000</td>\n",
+       "      <td>76.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Col1       Col2       Col3\n",
+       "count     4.000000   4.000000   4.000000\n",
+       "mean   2013.000000  21.000000  58.250000\n",
+       "std       0.816497   9.763879  14.863266\n",
+       "min    2012.000000  13.000000  45.000000\n",
+       "25%    2012.750000  13.750000  46.500000\n",
+       "50%    2013.000000  18.500000  56.000000\n",
+       "75%    2013.250000  25.750000  67.750000\n",
+       "max    2014.000000  34.000000  76.000000"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Devuelve información estadística de las columnas numéricas\n",
+    "df.describe()"
    ]
   },
   {
